--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -218,7 +218,7 @@ section {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 2px;
+    width: 3px;
     height: 2px;
 
 }
@@ -1335,7 +1335,7 @@ margin-bottom:2%;
 
 #mybox4 {
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
-   
+   margin-bottom:5%;
     padding: 5%;
     padding-right:0%;
     padding-bottom: 7%;
@@ -1348,10 +1348,9 @@ margin-bottom:2%;
 #mybox4:hover {
     background:white;
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.2);
-   position: fixed;
-    padding-bottom: 2%;
-     z-index: 3;
-     width: 75%;
+    padding-bottom: 7%;
+
+     width: 100%;
 }
 
 #imgnotification {
