--- a/counsellingApp/templates/app/notification.html
+++ b/counsellingApp/templates/app/notification.html
@@ -10,7 +10,10 @@
     </div>
     <center><hr id="hrsect4" /></center>
 
-    <div style="overflow-y: scroll; height: 100%" class="bg-white">
+    <div
+      style="overflow-y: scroll; overflow-x: hidden; height: 100%"
+      class="bg-white"
+    >
       {% for notificate in notification %}<!---->
       {% if notificate.student_id == pk%}
       <div id="mybox4">
