--- a/counsellingApp/templates/app/notification.html
+++ b/counsellingApp/templates/app/notification.html
@@ -14,13 +14,13 @@
       style="overflow-y: scroll; overflow-x: hidden; height: 100%"
       class="bg-white"
     >
-      {% for notificate in notification %}<!---->
-      {% if notificate.student_id == pk%}
+      {% for notificat in notification %}<!---->
+      {% if notificat.student_id == pk%}
       <div id="mybox4">
-        {% if notificate.counsellor_profile %}
+        {% if notificat.counsellor_profile %}
         <img
           id="imgnotification"
-          src="{{ notificate.counsellor_profile.url }}"
+          src="{{ notificat.counsellor_profile.url }}"
           alt="profile image"
         />
         {% else %}
@@ -32,16 +32,16 @@
         {% endif %}
         <div id="unique">
           <p id="notname">
-            {{notificate.counsellor_title}} {{ notificate.counsellor_firstName}}
-            {{notificate.counsellor_lastName}}
+            {{notificat.counsellor_title}} {{ notificate.counsellor_firstName}}
+            {{notificat.counsellor_lastName}}
           </p>
           <p id="notnamesub">{{ notificate.subject}}.</p>
         </div>
         <div id="uni">
           <center>
-            <p style="opacity: 0.4">{{ notificate.date}}</p>
+            <p style="opacity: 0.4">{{ notificat.date}}</p>
 
-            <p style="opacity: 0.4">{{ notificate.time}}</p>
+            <p style="opacity: 0.4">{{ notificat.time}}</p>
           </center>
         </div>
       </div>
