--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -2,8 +2,8 @@
 <!---->
 {% load static%}
 
-<section id="section6container1">
-  <div style="height: 98%; overflow-x: hidden; overflow-y: scroll">
+<section id="section6container1" class="col-sm-10">
+  <div>
     <div>
       <div id="toprightcontent6">
         <p id="panel">ADMIN PANEL</p>
