--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -14,8 +14,8 @@
 {% block body %}{% endblock %}
 
 <body>
-  <section id="section6container3">
-    <div style="height:98%; overflow-x:hidden;overflow-y:scroll">
+  <section id="section6container3" >
+    <div style="height:98%;width:100%; overflow-x:hidden;overflow-y:scroll">
     <div >
       {% for object in objects%}<!---->
       {% if object.user_id == pk|add:0 %}
