--- a/counsellingApp/templates/app/notification.html
+++ b/counsellingApp/templates/app/notification.html
@@ -1,6 +1,6 @@
 {% include 'app/header.html' %}{% include 'app/home.html' %} {% load static%}
 
-<section id="section4">
+<section id="section4" class="col-sm-10">
   <div id="section4container">
     <div>
       <p style="width: 95%; float: left; font-weight: bold">
