--- a/counsellingApp/templates/app/profile.html
+++ b/counsellingApp/templates/app/profile.html
@@ -1,7 +1,7 @@
 {% include 'app/header.html' %}{% include 'app/home.html' %}
 {% load static%}
 
-<section id="section3" class = "col-sm-10">
+<section id="section3">
 
 <div id="headpic">
  <div id = "subpic">
