--- a/counsellingApp/templates/app/index.html
+++ b/counsellingApp/templates/app/index.html
@@ -44,7 +44,7 @@
         <div class="panel-body">
           {% if object.profile%}
           <img src="{{object.profile.url }}"   
-          class="img-responsive" style="width:30%;height:20%;border-radius:35px" alt="Image">
+          class="img-responsive" id = "what" alt="Image">
         
         {% else %}
       <!----><img
