--- a/counsellingApp/templates/app/popup.html
+++ b/counsellingApp/templates/app/popup.html
@@ -1,9 +1,11 @@
 {% include 'app/header.html' %}{% include 'app/home.html'%} {% load static%}
 
+
+<section id = "section11">
   <div
     class="mask"
     id="darkscreen"
-    style="background-color: rgba(0, 0, 0, 0.9); overflow: hidden"
+   
   >
     <div class="bg-image" id="longscreen">
       <div class="h-100">
@@ -182,3 +184,4 @@
   </div>
 </div>
 {% else %}{% endif %} {% endfor %}
+</section>
