--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -165,6 +165,16 @@
     padding:2%;
 }
 
+#section11{
+    display: block;
+    width: 83.3%;
+    float: right;
+    height: 100%;
+    overflow-y: scroll;
+    animation-name: example;
+    animation-duration: 1s;
+   padding:0%;
+}
 
 #mystudent{
     
@@ -401,6 +411,12 @@ section {
 
 
 /*bubbles*/
+
+#darkscreen{
+    background-color: rgba(0, 0, 0, 0.9);
+     overflow: hidden;
+     
+}
 
 *{
     margin: 0;
@@ -2063,12 +2079,70 @@ body {
        
         postion: relative;
     }
+
+    #section11 {
+        width: 100%;
+        height: 100%;
+        background-size:cover;
+        background-position:center;
+    float:center;
+    overflow:   hidden; 
+        postion: relative;
+    }
+
+#darkscreen{
+     background-color: rgba(255, 255, 255, 0.9);
+     overflow: hidden;
+     height:100%;
+     padding:0%;
+    
+}
+
+#a1,
+#a2,
+#a3,
+#a4,
+#a5 {
+    width: 100%;
+    height: 2000px;
+    background-size: cover;
+    {% comment %} background-repeat: no-repeat; {% endcomment %}
+    {% comment %} box-shadow:
+        inset 0px 700px 3px rgba(0, 0, 0, .5); {% endcomment %}
+}
+
+
+
+
+
 #blind {
         width: 100%;
         height: 100%;
         overflow-x:scroll;
         postion: relative;
     }
+
+    #popup_screenS{
+    position: relative;
+    top: -110%;
+    left: -15%;
+    width: 72%;
+    transform: translate(20%, 30%);
+    justify-self: center;
+    height: 500px;
+    margin: 0 auto;
+    z-index: 10;
+    display:block;
+    backdrop-filter: blur(1rem);
+    box-shadow:inset 0px 0px 50px white;
+    border-radius: 10px;
+    border: 1px solid grey;
+    overflow-y: scroll;
+    animation-name: example;
+    animation-duration: 1s;
+}
+
+
 
  /*bubbles*/
 
@@ -2463,5 +2537,24 @@ padding-left: 40px
         padding-right: 3%;
         overflow: hidden;
     }
+
+
+
+#a1,
+#a2,
+#a3,
+#a4,
+#a5 {
+    width: 100%;
+    height: 2000px;
+    {% comment %} background-size: cover; {% endcomment %}
+    {% comment %} background-repeat: no-repeat; {% endcomment %}
+    {% comment %} box-shadow:
+        inset 0px 700px 3px rgba(0, 0, 0, .5); {% endcomment %}
+}
+
+
+
+
 
 }
