--- a/counsellingApp/templates/app/index.html
+++ b/counsellingApp/templates/app/index.html
@@ -7,14 +7,14 @@
 
 <header>
   
-    <div class="mask" id="darkscreen" style="background-color: rgba(0, 0, 0, 0.9);">
+    <div class="mask" id="darkscreen" >
 
   <div
     class="  bg-image" id="longscreen"
  
   >
       <div class="h-100">
-        <div id="a"  style="background-color: rgba(0, 0, 0, 0.9);">
+        <div id="a"  >
           <div id="b">
             <div  style="background-image: url('https://www.ug.edu.gh/ugmellon/sites/default/files/images/mail3.jpg') ;" id="a1"></div>
             <div   style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4jxM-gpQ-uuAk4y0k25fyzXSH4DAe3OwzAJzSXZe8Ee4Q3co1LtrTo8yGqHQsHcJuHqU&usqp=CAU') ;" id="a2"></div>
