--- a/counsellingApp/templates/app/popup.html
+++ b/counsellingApp/templates/app/popup.html
@@ -9,7 +9,7 @@
   >
     <div class="bg-image" id="longscreen">
       <div class="h-100">
-        <div id="a" style="background-color: rgba(0, 0, 0, 0.9)">
+        <div id="a" >
           <div id="b">
             <div
               style="
