--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -174,6 +174,7 @@
     animation-name: example;
     animation-duration: 1s;
    padding:0%;
+   margin:0%;
 }
 
 #mystudent{
@@ -415,6 +416,7 @@ section {
 #darkscreen{
     background-color: rgba(0, 0, 0, 0.9);
      overflow: hidden;
+     height:100%;
      
 }
 
@@ -1514,6 +1516,7 @@ margin-bottom:2%;
 }
 
 #a {
+    background-color: rgba(0, 0, 0, 0.9);
     overflow: hidden;
 }
 
@@ -2083,15 +2086,16 @@ body {
     #section11 {
         width: 100%;
         height: 100%;
+       
+        padding:0%;
         background-size:cover;
         background-position:center;
-    float:center;
-    overflow:   hidden; 
+        float:center;
+        overflow: hidden; 
         postion: relative;
     }
 
 #darkscreen{
-     background-color: rgba(255, 255, 255, 0.9);
      overflow: hidden;
      height:100%;
      padding:0%;
@@ -2106,14 +2110,43 @@ body {
     width: 100%;
     height: 2000px;
     background-size: cover;
+    background-position:center;
     {% comment %} background-repeat: no-repeat; {% endcomment %}
-    {% comment %} box-shadow:
-        inset 0px 700px 3px rgba(0, 0, 0, .5); {% endcomment %}
+box-shadow:
+        inset 0px 2000px 3px rgba(0, 0, 0, .5);
 }
 
+#a {
+    background-color: rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+#b {
+    width: 500%;
+    display: flex;
+    /* animation: move 15s forwards; */
+    background: rgba(0, 0, 0, 0.1);
 
 
 
+}
+#profilepic6 {
+    width: 100%;
+    height: 70%;
+    float: left;
+   
+   
+}
+
+.dropdown-content {
+    display: none;
+  left:-12;
+    background-color: white;
+    font-size: 12px;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
 
 #blind {
         width: 100%;
@@ -2124,12 +2157,12 @@ body {
 
     #popup_screenS{
     position: relative;
-    top: -110%;
+    top: -120%;
     left: -15%;
     width: 72%;
     transform: translate(20%, 30%);
     justify-self: center;
-    height: 500px;
+    height: 80%;
     margin: 0 auto;
     z-index: 10;
     display:block;
