--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -1,483 +1,27 @@
-{% load static %}{% include 'app/header.html'%}
-<!DOCTYPE html>
-
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="initial-scale=1.0" />
-
-    <meta name="robots" content="max-image-preview:large" />
-
-    <link
-      rel="stylesheet"
-      id="hotel-style-css"
-      href="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/plugins/gdlr-hotel/gdlr-hotel.css?ver=5.8.3"
-      type="text/css"
-      media="all"
-    />
-
-    <link
-      rel="stylesheet"
-      id="style-custom-css"
-      href="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/stylesheet/style-custom.css?1636549854&#038;ver=5.8.3"
-      type="text/css"
-      media="all"
-    />
-  </head>
-
-  <section id = "section9">
-    <div
-      class="gdlr-item gdlr-item-start-content"
-      id="gdlr-single-booking-content"
-      
-     
-    >
-      <form
-        class="gdlr-reservation-bar bg-info"
-        id="gdlr-reservation-bar"
-        method="POST"
-        action=""
-        style="height: 120%; width: 35%"
-      >
-      {% csrf_token %}
-     
-      <div style = "padding: 5%;width:10%;float:left;">
-       <a href = "{% url 'counsellingUrls:dashboardPage' pk%}">
-<i class="fas fa-arrow-circle-left" aria-hidden="true" style="color: white;margin: 0%;width:50%;float:left ;"></i>
-     </div>
-    <div style ="width:90%;float:right">
-        <center>
-          <h3
-            style="
-              color: white;
-              padding-bottom: 5px;
-              border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-            "
-          >
-            <i class="fa fa-calendar" aria-hidden="true"></i>
-            Your Availability
-          </h3>
-        </center>
-      </div>
-        <div
-      
-
-          class="gdlr-reservation-bar-date-form"
-          id="gdlr-reservation-bar-date-form"
-        >
-          <div class="gdlr-reservation-field gdlr-resv-datepicker">
-              <h5 style="color: white">Date in</h5>
-            <div class="gdlr-datepicker-wrapper">
-              <input
-                style="width: 420px; height: 8%; font-size: 15px"
-                type="text"
-                id="gdlr-check-in"
-                class="gdlr-datepicker"
-                data-current-date="2022-02-28"
-                autocomplete="off"
-                data-dfm="d M yy"
-                data-block="[]"
-                value="2022-02-28"
-              />
-             
-              <input
-              
-                type="hidden"
-                class="gdlr-datepicker-alt"
-                name="gdlr-check-in"
-                autocomplete="off"
-                value="2022-02-28"
-              />
-            </div>
-          </div>
-
-          <div
-            class="row"
-            style="
-              border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-              padding-bottom: 5%;
-              width: 100%;
-            "
-          >
-            <div class="col-sm-6">
-              <h5 style="color: white">Days availiable in the week</h5>
-              <select
-                name="sub"
-                class="form-control"
-                style="height: 50%"
-                required
-              >
-                {% for u in range %}
-                <option>{{u}}</option>
-                {% endfor %}
-              </select>
-            </div>
-
-            <div class="col-sm-6">
-              <h5 style="color: white">Number of hours per session</h5>
-              <select
-                name="sub"
-                class="form-control"
-                style="height: 50%"
-                required
-              >
-                {% for u in rang %}
-                <option>{{u}}</option>
-                {% endfor %}
-              </select>
-            </div>
-          </div>
-
-          <div style="display: none">
-            <div class="gdlr-datepicker-wrapper">
-              <input
-                type="hidden"
-                style="display: none"
-                id="gdlr-check-out"
-                class="gdlr-datepicker"
-                data-current-date="2022-02-28"
-                autocomplete="off"
-                data-min-night="1"
-                data-dfm="d M yy"
-                data-block="[]"
-                value="2022-03-01"
-              /><input
-                type="hidden"
-                style="display: none"
-                class="gdlr-datepicker-alt"
-                name="gdlr-check-out"
-                autocomplete="off"
-                value="2022-03-01"
-              />
-            </div>
-          </div>
-          <br />
-
-          <div
-            class="row"
-            style="
-              border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-              padding-bottom: 5%;
-            "
-          >
-            <div class="col-sm-6">
-              <h5 style="color: white">Time in</h5>
-              <input type="time" class="form-control" />
-            </div>
-            <div class="col-sm-6">
-              <h5 style="color: white">Time out</h5>
-              <input type="time" class="form-control" />
-            </div>
-
-            <div class="col-sm-2">
-              <h5 style="color: white; padding-left: 10%">Add</h5>
-
-              <a href="#">
-                <button
-                  style="font-size: 20px"
-                  class="btn btn-info add-last"
-                  type="button"
-                >
-                  <i class="glyphicon glyphicon-plus"></i></button
-              ></a>
-            </div>
-            <div >
-              <h5 style="color: white">Delete</h5>
-
-              <a href="#">
-                <button
-                  style="font-size: 20px"
-                  class="btn btn-danger remove"
-                  type="button"
-                >
-                  <i class="glyphicon glyphicon-remove"></i></button
-              ></a>
-            </div>
-          </div>
-          <br />
-           <div
-            class="row"
-            style="
-              border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-              padding-bottom: 5%;
-              width: 100%;
-            "
-          >
-            <div class="col-sm-6">
-              <h5 style="color: white">Notes</h5>
-              <textarea
-                style="width: 420px; height: 100%; font-size: 15px"
-                type="text"
-               ></textarea>
-            </div>
-            </div>
-            <br>
-          <center>
-            <button
-              style="font-size: 15px"
-              class="btn btn-info add-last"
-              type="submit"
-            >
-              <i class="glyphicon glyphicon-plus"></i> Add Availability
-            </button>
-          </center>
-        </div>
-      </form>
-       <div class="col-lg-7">
-        <div class="well bg-info">
-          <h4 style="color: white">
-            <i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard
-          </h4>
-        </div>
-        <div>
-      <div class="gdlr-booking-content">
-        <div class="gdlr-booking-content-wrapper">
-          <div
-            class="gdlr-booking-content-inner"
-            id="gdlr-booking-content-inner"
-          >
-            <div class="gdlr-datepicker-range-wrapper">
-              <div
-                class="gdlr-datepicker-range"
-                data-current-date="2022-02-28"
-                id="gdlr-datepicker-range"
-                data-dfm="d M yy"
-                data-block="[]"
-              ></div>
-            </div>
-          </div>
-        </div>
-      </div>
+{% include 'app/header.html'%}
+<div class="row" style="height: 100%">
+  <div
+    class="col-sm-2"
+    style="background: rgb(143, 0, 255); height: 100%; padding-left: 2%"
+  >
+    <div class="col-sm-12" style="border-bottom: 2px solid cyan">
+      <h4 style="color: white">Days of the week</h4>
     </div>
+    <br />
+    <br />
+    <br />
+    <div class="col-sm-12">
+      <a href="#" id="able"> <p style="color: white">MONDAY</p></a>
+      <a href="#" id="able"><p style="color: white">TUESDAY</p></a>
+      <a href="#" id="able"><p style="color: white">WEDNESDAY</p></a>
+      <a href="#" id="able"><p style="color: white">THRUSDAY</p></a>
+      <a href="#" id="able"><p style="color: white">FRIDAY</p></a>
+      <a href="#" id="able"><p style="color: white">SATURDAY</p></a>
+      <a href="#" id="able"><p style="color: white">SUNDAY</p></a>
+    </div>
+  </div>
 
-    <script type="text/javascript"></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-includes/js/dist/vendor/regenerator-runtime.min.js?ver=0.13.7"
-      id="regenerator-runtime-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-includes/js/dist/vendor/wp-polyfill.min.js?ver=3.15.0"
-      id="wp-polyfill-js"
-    ></script>
-    <script type="text/javascript" id="contact-form-7-js-extra">
-      /* <![CDATA[ */
-      var wpcf7 = {
-        api: {
-          root: "https:\/\/coconutgrovehotelsghana.com\/regencyhotel\/wp-json\/",
-          namespace: "contact-form-7\/v1",
-        },
-      };
-      /* ]]> */
-    </script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/plugins/contact-form-7/includes/js/index.js?ver=5.5.3"
-      id="contact-form-7-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-includes/js/jquery/ui/core.min.js?ver=1.12.1"
-      id="jquery-ui-core-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-includes/js/jquery/ui/datepicker.min.js?ver=1.12.1"
-      id="jquery-ui-datepicker-js"
-    ></script>
-    <script type="text/javascript" id="jquery-ui-datepicker-js-after">
-      jQuery(document).ready(function (jQuery) {
-        jQuery.datepicker.setDefaults({
-          closeText: "Close",
-          currentText: "Today",
-          monthNames: [
-            "January",
-            "February",
-            "March",
-            "April",
-            "May",
-            "June",
-            "July",
-            "August",
-            "September",
-            "October",
-            "November",
-            "December",
-          ],
-          monthNamesShort: [
-            "Jan",
-            "Feb",
-            "Mar",
-            "Apr",
-            "May",
-            "Jun",
-            "Jul",
-            "Aug",
-            "Sep",
-            "Oct",
-            "Nov",
-            "Dec",
-          ],
-          nextText: "Next",
-          prevText: "Previous",
-          dayNames: [
-            "Sunday",
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday",
-            "Saturday",
-          ],
-          dayNamesShort: ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"],
-          dayNamesMin: ["S", "M", "T", "W", "T", "F", "S"],
-          dateFormat: "MM d, yy",
-          firstDay: 1,
-          isRTL: false,
-        });
-      });
-    </script>
-    <script type="text/javascript" id="hotel-script-js-extra">
-      /* <![CDATA[ */
-      var objectL10n = {
-        closeText: "Done",
-        currentText: "Today",
-        monthNames: [
-          "January",
-          "February",
-          "March",
-          "April",
-          "May",
-          "June",
-          "July",
-          "August",
-          "September",
-          "October",
-          "November",
-          "December",
-        ],
-        monthNamesShort: [
-          "Jan",
-          "Feb",
-          "Mar",
-          "Apr",
-          "May",
-          "Jun",
-          "Jul",
-          "Aug",
-          "Sep",
-          "Oct",
-          "Nov",
-          "Dec",
-        ],
-        monthStatus: "Show a different month",
-        dayNames: [
-          "Sunday",
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday",
-          "Saturday",
-        ],
-        dayNamesShort: ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"],
-        dayNamesMin: ["S", "M", "T", "W", "T", "F", "S"],
-        firstDay: "1",
-      };
-      /* ]]> */
-    </script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/plugins/gdlr-hotel/gdlr-hotel.js?ver=1.0.0"
-      id="hotel-script-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/superfish/js/superfish.js?ver=1.0"
-      id="superfish-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-includes/js/hoverIntent.min.js?ver=1.10.1"
-      id="hoverIntent-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/dl-menu/modernizr.custom.js?ver=1.0"
-      id="modernizr-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/dl-menu/jquery.dlmenu.js?ver=1.0"
-      id="dlmenu-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/jquery.easing.js?ver=1.0"
-      id="jquery-easing-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/jquery.transit.min.js?ver=1.0"
-      id="jquery-transit-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/fancybox/jquery.fancybox.pack.js?ver=1.0"
-      id="jquery-fancybox-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/fancybox/helpers/jquery.fancybox-media.js?ver=1.0"
-      id="jquery-fancybox-media-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/fancybox/helpers/jquery.fancybox-thumbs.js?ver=1.0"
-      id="jquery-fancybox-thumbs-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/plugins/flexslider/jquery.flexslider.js?ver=1.0"
-      id="hotelmaster-flexslider-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/themes/hotelmaster-v2-04/javascript/gdlr-script.js?ver=1.0"
-      id="gdlr-script-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://maps.google.com/maps/api/js?key=AIzaSyAHDEeRg6qdqYik_tt08Olf01gA4YtTidk&#038;libraries=geometry%2Cplaces%2Cweather%2Cpanoramio%2Cdrawing&#038;language=en&#038;ver=5.8.3"
-      id="wpgmp-google-api-js"
-    ></script>
-    <script type="text/javascript" id="wpgmp-google-map-main-js-extra">
-      /* <![CDATA[ */
-      var wpgmp_local = {
-        all_location: "All",
-        show_locations: "Show Locations",
-        sort_by: "Sort by",
-        wpgmp_not_working: "Not working...",
-        place_icon_url:
-          "https:\/\/coconutgrovehotelsghana.com\/regencyhotel\/wp-content\/plugins\/wp-google-map-plugin\/assets\/images\/icons\/",
-      };
-      /* ]]> */
-    </script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/plugins/wp-google-map-plugin/assets/js/maps.js?ver=2.3.4"
-      id="wpgmp-google-map-main-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-content/plugins/masterslider/public/assets/js/masterslider.min.js?ver=3.5.0"
-      id="masterslider-core-js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://coconutgrovehotelsghana.com/regencyhotel/wp-includes/js/wp-embed.min.js?ver=5.8.3"
-      id="wp-embed-js"
-    ></script>
-  </section>
-</html>
+  <div class="col-sm-8">
+    <p>hi</p>
+  </div>
+</div>
