--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -26,7 +26,7 @@
           <h6 style="font-size: 20px">My Dashboard - {{object.user_id}}</h6>
         </div>
       </div>
-     
+    {{request.user.email_address}}
      <div class="col-lg-3">
        
       <!--id="objectsprofile" -->
