--- a/counsellingApp/templates/app/profile.html
+++ b/counsellingApp/templates/app/profile.html
@@ -131,9 +131,11 @@
    <br>
    <div class="col-sm-10">
    <div class="row">
-<i class="fa-solid fa-phone" id = "awe" style="color:white;opacity:0.7; font-size:15px; padding:2%;"></i>
-<i class="fa-solid fa-message" id = "awe" style="color:white;opacity:0.7;  font-size:15px; padding:2%;"></i>
-<i class="fa-solid fa-users" id = "awe" style="color:white;opacity:0.7;  font-size:15px; padding:2%;"></i>
+<a href = "tel:0{{object.contact}}" style=" padding:2%;"><i class="fa-solid fa-phone" id = "awe" style="color:white;opacity:0.7; font-size:15px; padding:5%;"></i></a>
+
+<a href = ""  style=" padding:2%;"><i class="fa-solid fa-message" id = "awe" style="color:white;opacity:0.7;  font-size:15px; padding:2%;"></i></a>
+
+<a href = "#"  style=" padding:2%;"><i class="fa-solid fa-users" id = "awe" style="color:white;opacity:0.7;  font-size:15px; padding:2%;"></i></a>
 </div></div>
          </div>
          </div>   
