--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -15,7 +15,7 @@
 
 <body>
   <section id="section6container3" >
-    <div style="height:98%;width:100%; overflow-x:hidden;overflow-y:scroll">
+    <div style="height:98%;">
     <div >
       {% for object in objects%}<!---->
       {% if object.user_id == pk|add:0 %}
