--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -69,7 +69,7 @@
             <div class="card-box bg-green">
               <div class="inner">
                 <h3>{{pk}}</h3>
-                <p>Edit profile</p>
+                <p>Profile</p>
               </div>
               <div class="icon">
                 <i class="fa fa-graduation-cap" aria-hidden="true"></i>
@@ -77,7 +77,7 @@
               <a
                 href="{% url 'counsellingUrls:dashboardPage' pk %}"
                 class="card-box-footer"
-                >View More <i class="fa fa-arrow-circle-right"></i
+                >Edit profile <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
           </div>
