--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -2114,10 +2114,8 @@ body {
 
     #section6container3 {
     padding: 1%;
-     
+     width:100%;
     height:100%;
-
-    
     font-family: Montserrat;
     display:block;
     overflow: hidden;
@@ -2185,6 +2183,22 @@ box-shadow:
         overflow-x:scroll;
         postion: relative;
     }
+
+#footer6 {
+   
+    font-size: 10px;
+    padding: 0.1%;
+    
+    display: flex;
+height:2%;
+    
+}
+
+
+
+
+
+
 
     #popup_screens{
     position: relative;
