--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -1,27 +1,30 @@
 {% include 'app/header.html'%}
-<div class="row" style="height: 100%">
-  <div
-    class="col-sm-2"
-    style="background: rgb(143, 0, 255); height: 100%; padding-left: 2%"
-  >
-    <div class="col-sm-12" style="border-bottom: 2px solid cyan">
-      <h4 style="color: white">Days of the week</h4>
-    </div>
-    <br />
-    <br />
-    <br />
-    <div class="col-sm-12">
-      <a href="#" id="able"> <p style="color: white">MONDAY</p></a>
-      <a href="#" id="able"><p style="color: white">TUESDAY</p></a>
-      <a href="#" id="able"><p style="color: white">WEDNESDAY</p></a>
-      <a href="#" id="able"><p style="color: white">THRUSDAY</p></a>
-      <a href="#" id="able"><p style="color: white">FRIDAY</p></a>
-      <a href="#" id="able"><p style="color: white">SATURDAY</p></a>
-      <a href="#" id="able"><p style="color: white">SUNDAY</p></a>
-    </div>
-  </div>
 
-  <div class="col-sm-8">
-    <p>hi</p>
+<section id="section12">
+  <div class="row" style="height: 100%">
+    <div
+      class="col-sm-2"
+      style="background: rgb(143, 0, 255); height: 100%; padding-left: 2%"
+    >
+      <div class="col-sm-12" style="border-bottom: 2px solid cyan">
+        <h4 style="color: white">Days of the week</h4>
+      </div>
+      <br />
+      <br />
+      <br />
+      <div class="col-sm-12">
+        <a href="#" id="able"> <p style="color: white">MONDAY</p></a>
+        <a href="#" id="able"><p style="color: white">TUESDAY</p></a>
+        <a href="#" id="able"><p style="color: white">WEDNESDAY</p></a>
+        <a href="#" id="able"><p style="color: white">THRUSDAY</p></a>
+        <a href="#" id="able"><p style="color: white">FRIDAY</p></a>
+        <a href="#" id="able"><p style="color: white">SATURDAY</p></a>
+        <a href="#" id="able"><p style="color: white">SUNDAY</p></a>
+      </div>
+    </div>
+
+    <div class="col-sm-10" style="padding: 2%; padding-right: 3%">
+      <div class="col-sm-12" id="avapad"></div>
+    </div>
   </div>
-</div>
+</section>
