--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -183,6 +183,35 @@
    margin:0%;
 }
 
+
+#section12{
+   display: block;
+    width: 100%;
+    float: right;
+    height: 100%;
+    overflow: hidden;
+   
+   padding:0%;
+   margin:0%;
+}
+
+
+
+#avapad{
+    height:95%;
+    box-shadow: 1px 1px 12px -5px;
+    border-radius:10px;
+}
+
+
+
+
+
+
+
+
+
+
 #mystudent{
     
     font-size: 17px;
