--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -56,7 +56,9 @@
     display:block;
     animation-name: example;
     animation-duration: 1s;
+    overflow:hidden;
     overflow-y: scroll;
+
 
 }
 
